--- a/Markdown/Eigen/1. Eigen 3.3.7 快速入门.md
+++ b/Markdown/Eigen/1. Eigen 3.3.7 快速入门.md
@@ -2,6 +2,8 @@
 
 学完当前教程后可以参考 [The Matrix class][0] 进行进一步学习。   
 
+[TOC]
+
 ## 如何安装 Eigen
 因为 Eigen 是 header-only 的，所以直接下载 Eigen 头文件即可使用。
 
@@ -24,25 +26,25 @@ int main()
 下面先介绍编译方式再解释代码
 
 ## 编译并执行
-Eigen 不依赖其他三方库，只要把 Eigen 库放到编译器可以发现的路径即可。使用GCC你可以使用`-I`指明Eigen头文件的路径，你可以使用下面的指令编译上面的代码：  
+Eigen 不依赖其他三方库，只要把 Eigen 头文件放到编译器可以发现的路径即可。使用 GCC 你可以使用 `-I` 指明 Eigen 头文件的路径，你可以使用下面的指令编译上面的代码：  
 `g++ -I /path/to/eigen/ my_program.cpp -o my_program`  
 在linux或者Mac OS X中，你可以将 Eigen 头文件复制到 `usr/local/include` 目录下，这样你就可以使用下面的指令编译上面的代码：  
 `g++ my_program.cpp -o my_program`  
 编译并执行上面的代码，你将获得如下输出：
 
 ``
-3   -1
+3   -1   
 2.5 1.5
 ``
 
 ## 解释第一个程序
 Eigen 头文件定义了很多类型，对于简单的使用来说只使用 MatrixXd 类就可以了。MatrixXd 可以表示任意维度的矩阵（MatrixXd中的X表示任意），而且矩阵的元素都是 double 类型的（MatrixXd中的d表示double）。[quick reference guide][1] 中简要介绍了 Eigen 提供的用于描述矩阵的类。
 
-Eigen/Dense头文件定义了MatrixXd类中可用的所有方法和相关类型，所有方法均定义在Eigen名字空间中。
+Eigen/Dense 头文件定义了MatrixXd类中可用的所有方法和相关类型，所有方法均定义在Eigen名字空间中。
 
-main 函数中的第一行定义了一个2行2列的MatrixXd矩阵，表达式`m(0,0) = 3`将矩阵左上角的元素置为3。在 Eigen 中你可以使用小括号来获得对应元素的引用。在计算机科学中第一个元素的下标为 0，然而在传统的数学表达方法中第一个元素的下标是 1。
+main 函数中的第一行定义了一个2行2列的MatrixXd矩阵，表达式`m(0,0) = 3`将矩阵左上角的元素置为3。在 Eigen 中你可以使用**小括号**来获得对应元素的引用。在计算机科学中第一个元素的下标为 0，然而在传统的数学表达方法中第一个元素的下标是 1。
 
-## 示例2,：矩阵和向量
+## 示例2：矩阵和向量
 下面的例子包含了矩阵和向量，我们先讲第二段代码
 
 ```c++
@@ -101,8 +103,6 @@ m * v =
 
 ## 进一步的学习
 阅读[long turorial][3]是比较好的选择。
-
-
 
 ## 其他教程
 
@@ -179,14 +179,265 @@ cout << v1 . cross ( v2 ) << endl ;
 cout << v1 . array () * v2 . array () << endl << endl ;
 cout << v1 . array () . sin () << endl ;
 ```
+---
+
+# Eigen 3.3.7，Matrix 模板类
+
+原文地址：[`http://eigen.tuxfamily.org/dox/group__TutorialMatrixClass.html`][4]   
+
+在 Eigen 中，所有的矩阵和向量都是 Matrix 模板类。向量是特殊的矩阵，有着一行或者一列数据。  
+
+## Matrix 的前三个模板参数
+
+Matrix 有六个模板参数，这里我们只介绍前三个。后三个模板参数有默认值，我们将在其他小结中做介绍。  
+
+前三个模板参数如下所示：  
+`Matrix<typename Scalar, int RowsAtCompileTime, int ColsAtCompileTime>` 
+
+* Scalar 是矩阵中元素的类型。如果你想构建一个由浮点数组成的矩阵，将当前参数设置为float即可
+* RowsAtCompileTime 和 ColsAtCompileTime用来在编译时确定矩阵的尺寸
+
+Eigen 提供了一些常用的矩阵类型，比如 Matrix4f，在Eigen中其定义如下：  
+`typedef Matrix<float, 4, 4> Matrix4f;`
+
+## 向量
+Eigen 中向量是特殊的矩阵，有一列或者一行数据。有一列数据的向量被称之为列向量（Eigen中的向量默认为列向量），有一行数据的向量被称为行向量。
+
+举个例子，内置的**列向量** Vector3f 类型在 Eigen中 的定义如下：   
+`typedef Matrix<float, 3, 1> Vector3f;`      
+Eigen 同时提供了内置的行向量：  
+`typedef Matrix<int, 1, 2> RowVector2i;`
+
+## 动态矩阵
+Eigen 提供了编译时尺寸不明确的矩阵类。RowsAtCompileTime 和 ColsAtCompileTime可以被设置为`Dynamic`以标识矩阵的尺寸在编译时是不明确的，只能在运行时确定。在 Eigen 中编译时可确定尺寸的矩阵被称为固定尺寸矩阵（后文称之为定维矩阵），在运行时才能确定大小的矩阵被称为动态尺寸矩阵（后文称之为动态矩阵）。Eigen 内置的 MatrixXd，一个元素类型为 double 的动态矩阵的定义如下：  
+`typedef Matrix<double, Dynamic, Dynamic> MatrixXd;`  
+类似的，Eigen 定义了 VectorXi：  
+`typedef Matrix<int, Dynamic, 1> VectorXi;`  
+你可以定义一个维度未知而另一个维度已知的矩阵，如下：  
+`Matrix<float, 3, Dynamic>`
+
+## 构造函数
+默认构造函数总是可用的，默认构造函数不会分配内存亦不会初始化矩阵元素：  
+
+```c++
+Matrix3f a; // 3*3 matrix, uninitialized
+MatrixXf b; // 0-by-0 currently
+```
+
+Eigen 提供接受指定矩阵尺寸参数的构造函数。对于矩阵，行数总是第一个参数。对于向量，只需要提供向量参数的个数即可。这些构造函数分配了矩阵或者向量所需要的内存空间但**没有初始化这些内存**。
+
+```c++
+MatrixXf a(10,15);
+VectorXf b(30);
+```
+
+为了给定维矩阵和动态矩阵提供统一的API，对定维矩阵使用上面的构造函数也是合法的，例如：`Matrix3f a(3,3)`，虽然这样没有什么意义，但对于Eigen而言这不算错误。
+
+Eigen 提供了向量元素初始化的构造函数，不过这类内置构造函数只支持向量尺寸小于等于4的情形：
+
+```c++
+Vector2d a(5.0, 6.0);
+Vector3d b(5.0, 6.0, 7.0);
+Vector4d c(5.0, 6.0, 7.0, 8.0);
+```
+
+## 矩阵元素引用
+Eigen 中主要的矩阵元素引用方式是使用重载后的小括号。对于矩阵，行索引总是第一个参数。对于向量而言，只需要一个索引值就可以了。所有索引值都从0开始。
+
+只有一个索引值的元素引用语法 `m(index)`并不仅限于向量，也适用于一般的矩阵，意味着读取一行（列）元素。然而这个特性十分依赖Eigen的存储顺序。所有的 Eigen 矩阵默认按列存储在内存中，不过你可以手动修改存储顺序，可参考[Storage orders][5]。
+
+运算符 `[]` 也被重载用于引用向量的元素，但是因为C++语言的特性，`[]`不能用于矩阵元素的引用，因为在C++中`[i,j]`和`[j]`的计算值是相同的，都是`[j]`。
+
+## 逗号初始化
+矩阵和向量都可以使用逗号初始化语法：
+
+```c++
+Matrix3f m;
+m << 1, 2, 3,
+     4, 5, 6,
+     7, 8, 9;
+std::cout << m;
+```
+[其他初始化方式][6]。
+
+## 维度调整
+Matrix 的尺寸信息可以通过 rows()、cols() 和 size() 获取，分别返回矩阵的行数、列数和所有元素的个数。矩阵尺寸调整可以通过方法 `resize()`。
+
+如果矩阵的实际尺寸没有发生变化，那么resize() 方法将不进行任何实际操作。如果使用resize()调整了矩阵的尺寸，那么矩阵元素的值可能发生变化。如果你需要一个保守的不改变矩阵元素值的resize方法，可以参考[conservativeResize()][7]。
+
+为了实现API的统一，所有调整矩阵尺寸的方法都适用于固定尺寸的矩阵，不过大部分时候这些函数都会报错或者不做任何实际操作。对于固定尺寸的矩阵 `Matrix4d m`，做这样的调整`m.resize(4,4)`是不会报错的，因为m并没有改变尺寸。
+
+## 赋值时调整尺寸
+Eigen 使用等号运算符执行拷贝赋值，Eigen 将**自动调整**等号左侧矩阵的尺寸与右侧矩阵相同，从而实现合法的赋值操作。不过如果左侧的矩阵是固定尺寸的且等号两侧矩阵尺寸不同，赋值将会失败。如果你不想Eigen自动调整矩阵尺寸，可以禁止这个特性。
+
+## 定维 vs 动态
+什么时候使用定维矩阵？什么时候使用动态矩阵？比较好的答案是：当矩阵尺寸比较小的时候使用定维矩阵，当矩阵尺寸比较大或者你不能使用定维矩阵时使用动态矩阵。对于定维矩阵而言，当尺寸较小时其执行效率要高于动态矩阵。定维矩阵，Eigen 将不会为其分配动态内存。在 Eigen 中定维矩阵在内存中的实现方式是普通的数组，`Matrix4f m` 的实现方式和`float m[16]`是非常类似的，而 `MatrixXf mx` 的实现方式和 `float mx*=new float[rows*cols]` 是类似的。
+
+当矩阵元素个数大于32或者更多时，固定尺寸的性能优势将不再明显。创建一个非常大的固定尺寸矩阵很可能造成**栈溢出**，因为Eigen在栈中创建定维矩阵。根据不同的编译与运行环境，Eigen可能使用更激进的向量化手段（例如使用SIMD指令），这些特性可以参考 Vectorization。
+
+## 含默认值的模板参数
+文章的开始提到Matrix一共有6个模板参数，到现在为止我们只讨论了其中3个，其余三个有默认参数。下面是Matrix的完整声明：  
+
+```c++
+Matrix<typename Scalar,
+       int RowsAtCompileTime,
+       int ColsAtCompileTime,
+       int Options = 0,
+       int MaxRowsAtCompileTime = RowsAtCompileTime,
+       int MaxColsAtCompileTime = ColsAtCompileTime>
+```
+
+* Options ，不同比特位设置不同属性。这里我们只讨论一个比特位：RowMajor。设置这个位，当前矩阵将按照行顺序来保存矩阵，Eigen默认是按列顺序进行保存。
+* MaxRowsAtCompileTime 和 MaxColsAtCompileTime， 用于设置矩阵编译时最大尺寸。设置这两个参数最主要的原因是为了避免 Eigen 动态分配内存。
+
+## 内置类型
+Eigen 预定义了以下 Matrix 类型：
+* MatrixNt ，等价于 Matrix<type, N, N>，示例：MatrixXi=Matrix<int, Dynamic, Dynamic>
+* VectorNt，等价于 Matrix<type, N, 1>，示例：Vector2f=Marix<float, 2, 1>
+* RowVectorNt，等价 Matrix<type, 1, N>，示例：RowVector3d=Matrix<double, 1, 3>
+
+说明：
+* N 的取值可以是 2、3、4、或者 X（X表示动态）
+* t 可以是i（int），f（float），d（double），cf（complex<float>），或者cd（complex<double>）。内置类型除了这几种还可以是用户自定义类型
+
+---
+
+# Matrix&Vector的运算
+原文地址：[`http://eigen.tuxfamily.org/dox/group__TutorialMatrixArithmetic.html`][8]
+
+本章主要对矩阵、向量和标量之间的计算做一些简要介绍
+
+## 介绍
+
+为了实现矩阵（向量）之间的计算，Eigen 同时提供了运算符重载（+、-、×、/ 等）和类方法（dot()、corss() 等）两大形式的工具。对于 Matrix 类，重载的运算符只支持线性代数相关算法。例如，`matrix1*matrix2`意味着矩阵之间的点乘，`vector+scalar`是不被允许的表达式。如果你需要数组操作而非线性代数计算，可参考[这里][9]。
+
+## 加减运算
+加减运算符左右的矩阵必须有相同的尺寸，也必须有相同的元素类型，Eigen不支持自动类型提升。以下为运算符示例：`a+b、a-b、-a、a+=b、a-=b`。
+
+## 矩阵与标量的乘除
+矩阵乘或者除以标量的方法也很简单，例如：`matrix/scalar、m*s、s*m、m/=s、m*=s`
+
+## 表达式注意事项
+这里描述的是 Eigen 的高阶特性，具体内容可以参考[这里][10]，本节我们稍微提一下。在 Eigen 中算术运算符并不做实际的计算，这些运算符只是返回一个**被标识**要做相关计算的对象，真实的计算发生在对整个表达式求值的时候，一般是遇见赋值等号的时候。这样做有利于编译器做优化。举个例子：
+
+```c++
+VectorXf a(50), b(50), c(50), d(50);
+...
+a = 3*b + 4*c + 5*d;
+```
+Eigen 将上面的表达式编译为一个 for 循环，在不考虑其他优化（如 SIMD）的情况下可以等价为如下代码：
+
+```
+for(int i = 0; i < 50; ++i)
+  a[i] = 3*b[i] + 4*c[i] + 5*d[i];
+```
+_译者注：如果所有的实际计算发生在运算符出现的地方，那么上面的代码最少需要三个 for循环分别迭代b、c、d这三个矩阵，和一个for循环比起来在循环次数上后者是前者的1/3_
+
+所以不要怕使用非常长的算术表达式，长的算术表达式便于编译器做优化。
+
+## 转置和共轭
+_译者注：因为很久没有接触线性代数了，很多概念已经很生疏，故不对本小结再做翻译，以防出错。本小结主要介绍了一些求解矩阵特殊解的方法，例如求转置的transpose()等_
+
+## 矩阵与矩阵和矩阵与向量之间的乘法
+矩阵与矩阵（向量）之间的乘法使用运算符`*`，例如：`a*b、a*=b`
+
+默认情况下 Eigen 在做矩阵乘法的时候会生成一个临时变量来保存计算值，然后赋予等号左边的变量。如果你确定你不需要临时变量，可以使用[`noalias()`][11] 方法
+
+## 点乘与叉乘
+Eigen使用 dot() 和 cross() 实现点乘和叉乘。
+...
+
+## 基本的算术约简运算
+Eigen 提供了一些约简方法，将矩阵和向量转化为一个标量值。例如元素求和方法 sum()、元素乘积方法 prod()、最大元素方法 maxCoeff()、最小元素方法 minCoeff()。求对角元素之和可以使用方法 trace() 也可以使用 a.diagonal().sum() 方法。
+
+## 计算合法性检查
+Eigen 将检查你的运算是否合法。Eigen 会在编译或者运行时检查运算的有效性。那些在编译期间无法检查到的问题会在运行时进行检查。Debug 模式下 Eigen 会使用断言来检查计算的有效性与合法性，Release模式下如果出现非法运算，程序将直接崩溃并退出。
+
+---
+
+# 数组类（Array）和元素操作
+
+原文地址：[`http://eigen.tuxfamily.org/dox/group__TutorialArrayClass.html`][12]
+## Array 类有什么用？
+Array 类提供了一个一般用途的数组，用于操作元素相关算法，就像 Matrix 专门用于实现线性代数算法。更具体一点，Array 提供了对元素进行操作的方法，这些操作大部分与线性代数算法无关。比如数组中每个元素都加一个常量或者两个同维数组对应元素相乘。
+
+## Array 类型
+Array 是一个模板类，和Matrix有着相同的模板参数，前三个模板参数如下：  
+`Array<typename Scalar, int RowsAtCompileTime, int ColsAtCompileTime>`
+
+模板参数的功能与 Matrix 相同，这里就不在重复解释。
+
+与 Matrix 相同，Eigen 也内置了一些常用的 Array 对象，不过与 Matrix 不同指出在于Array同时定义了一维和二维Array。内置 Array 类型的任意维度均不大于4：   
+
+```c++
+Array<float,Dynamic,1> ArrayXf 
+Array<float,3,1> Array3f 
+Array<double,Dynamic,Dynamic> ArrayXXd 
+Array<double,3,3> Array33d 
+```
+## Array 元素的引用
+与 Matrix 相同，Array 重载了小括号以实现 Array 对象中元素的读写。同样，Array重载了 `<<` 以实现 Array 的初始化或者打印（`std::cout<<array;`）。
+
+更多有关初始化的话题请参考[这里][13]。
+
+## 加减运算
+Array 的加减运算是 element-wise 的，也就是相同尺寸 Array 对应元素之间的加减。
+
+Array 也提供了 Array 和标量之间的加减运算（这是与 Matrix 的不同之处）：`array+scalar`，Array 每个元素都与 scalar 相加。
+
+## 乘法运算
+两个相同尺寸的 Array 对应元素之间的乘法。Matrix 中也有对应的方法：`.cwiseProduct(.)`
+
+## 其他元素相关的运算
+Array 提供了其他有用的元素相关的运算，例如，求元素绝对值的 abs()、求平方根的 sqrt()、求两个 Array 相同位置最小值的 min(.) 等，示例如下：
+
+```c++
+cout << a.abs() << endl;
+cout << a.abs().sqrt() << endl;
+cout << a.min(a.abs().sqrt()) << endl;
+```
+更多方法可参考：[Quick reference guide][14]。
+
+## Matrix和Array之间的转换
+Eigen 中 Matrix 和 Array 的职能不同，前者完成线性代数相关算法，后者完成元素相关的计算，你需要按照自己需求在二者之间进行选择。有些时候我们需要同时对数据进行线性代数相关的操作和元素相关的操作，这个时候就需要在 Matrix 和 Array 之间进行转换。
+
+Matrix 有一个 array() 方法可将 Matrix 转化为 Array 对象。同样，Array 有一个 matrix() 方法可将 Array 对象转化为 Matrix 对象。和 Eigen 表达式优化一样，这种转换没有运行时消耗（假设你允许编译器优化）。.array() 方法和 .matrix() 方法的返回值均可以当做左值或者右值进行使用。
+
+Eigen 不允许在同一个表达式中同时使用 Array 和 Matrix 对象，也就是说你不能直接将 Array 和 Matrix 对象相加。重载的运算符 `+`，其两侧要么全是 Array，要么全是 Matrix 对象。赋值运算符是个例外，你可以将 Matrix d对象赋予 Array 对象，同样你也可以将 Array 对象赋予 Matrix对象。
+
+```c++
+  MatrixXf m(2,2);
+  MatrixXf n(2,2);
+  MatrixXf result(2,2);
+  m << 1,2,
+       3,4;
+  n << 5,6,
+       7,8;
+  result = m * n;
+  result = m.array() * n.array();
+  result = m.cwiseProduct(n);
+  result = m.array() + 4;
+```
+
+其他例子，如：`(m.array() + 4).matrix()*m`，`(m.array() * n.array()).matrix() * m`。
 
 
 
 [0]:http://eigen.tuxfamily.org/dox/group__TutorialMatrixClass.html
 [1]:http://eigen.tuxfamily.org/dox/group__QuickRefPage.html#QuickRef_Types
 [2]:http://eigen.tuxfamily.org/dox/group__TutorialAdvancedInitialization.html
-[3]:<https://dritchie.github.io/csci2240/assignments/eigen_tutorial.pdf>
+[3]:https://dritchie.github.io/csci2240/assignments/eigen_tutorial.pdf
+[4]:http://eigen.tuxfamily.org/dox/group__TutorialMatrixClass.html
+[5]:http://eigen.tuxfamily.org/dox/group__TopicStorageOrders.html
+[6]:http://eigen.tuxfamily.org/dox/group__TutorialAdvancedInitialization.html
+[7]:http://eigen.tuxfamily.org/dox/classEigen_1_1PlainObjectBase.html#a712c25be1652e5a64a00f28c8ed11462
 
-
+[8]:http://eigen.tuxfamily.org/dox/group__TutorialMatrixArithmetic.html
+[9]:http://eigen.tuxfamily.org/dox/group__TutorialArrayClass.html
+[10]:http://eigen.tuxfamily.org/dox/TopicEigenExpressionTemplates.html
+[11]:http://eigen.tuxfamily.org/dox/group__TopicAliasing.html
+[12]:http://eigen.tuxfamily.org/dox/group__TutorialArrayClass.html
+[13]:http://eigen.tuxfamily.org/dox/group__TutorialAdvancedInitialization.html
+[14]:http://eigen.tuxfamily.org/dox/group__QuickRefPage.html
 
 
