--- a/others/量子史话/量子史话.md
+++ b/others/量子史话/量子史话.md
@@ -39,7 +39,7 @@
 
 在另一张桌子上，立着一个装在绝缘底架上的刚硬金属线圆环，这是一个几乎闭合的简单圆环。对实验者来说，这圆环上的小间隙是整个装置的关键部分。如果他推测得正确，秘密就是要在这里揭开的（整理者注：*下图由整理者添加*）
 
-![赫兹无线电试验](D:\Seafile\hjiahu\notes\others\量子史话\imgs\HERTZ_TABLE.jpg)
+![赫兹无线电试验](imgs/HERTZ_TABLE.jpg)
 
 一切都准备就绪，实验者合上开关，于是两个小球之间电花劈劈啪啪地响起来。他背过脸去不看闪耀的电花，等待眼睛逐渐适应于黑暗。那是他的想象呢，还是他真的看见一团微弱的辉光充满圆环上的间隙？这很难讲。也可能只是反射的光。他轻轻地转动螺旋，推间隙两端靠拢，间隙越来越窄，同时辉光似乎亮起来。更接近些、接近些，最后，两端几乎要碰在一起。现在不会有疑问了。实验者松一口气：微小的电花正横穿过间隙
 
@@ -127,12 +127,12 @@
 
 数学上有一种巧妙手法，是古希腊人发明的，它把一个无从着手的匀滑情况换成一串细小的急跳，这便大大容易进行数学处理。这种手法是微积分的基础，按总的情况讲是个简单的手法。举个例，如果我们去计算(而不是度量)直径为一英寸的圆的圆周，就会发觉匀滑的圆周不大能当作数学上的立足点。因此，我们在眼前没有圆时暗自摸索这个问题。首先盘算有什么东西真可以作个牢固的思想立足点。 这样，我们在到达一个俯瞰这滑溜溜（“要小心的”，“不易把握的”——译者）问题的安全位置后，就可以突然跳到这问题上而不致有滑跤的危险
 
-![割园术](D:\Seafile\hjiahu\notes\others\量子史话\imgs\trangle_to_circle.jpg)
+![割园术](imgs/trangle_to_circle.jpg)
 
 这样，就圆周讲，我们把圆划分成四、八、十六....等分，用直线把分点连起来，如上图（整理者注：*上图和原文有些许差别*）。这些正多边形每一个都可以计算周边总长，很明显，随着取的边越来越多，越来越短，边的总长越来越接近圆的圆周。例如， 十六边形的周边总长比正方形的各边总和跟圆的圆周要接近得多。数学家的作法是计算一个一般边数的图形的周长。完成一般计算之后，再让公式中的边数无限增多，于是突然把尖角展平。照这样，不容难办的匀滑性介入计算细节，最后得出一般公式。附带提一下，单位直径的圆的圆周用希腊字母 π 表示，这个数目在量子论中不断出现。说近似值，π是 3.14；可是如果我们要写出它的精确值，它就猛烈反对，表现得象一匹骑兵骏马在鞭策下一直向前跑下去而不重走旧路，让人完全无法忍受：
 
 ```
-π = 3.141592653589793238462643383279502884197.....
+π = 3.141592653589793238462643383279502884197...
 ```
 
 现在话归原题普朗克。还在 1900 年以前他已经证明，对于他的特定目的来说，一块物质可以用无数个有节奏地上下跳动的粒子来代表。有的粒子跳得较快，有的较慢，包括一切振动频率。这些个普朗克所谓的振子，只有一项简单任务：振动加猛时吸收热能和光能，而在猛烈程度降低时再放出能量。它们正象孩子们的秋千，受到人推时荡过的圆弧越来越大；而且它们可以象海绵含水那样自然地含着能量
