--- a/others/量子史话/量子史话.md
+++ b/others/量子史话/量子史话.md
@@ -220,18 +220,163 @@ h 竟这样小到极点，这就表示能量急跳弱得不可想象。然而，
 
 ## 第四章 半斤八两
 
+是波动呢还是微粒?
 
+十七世纪，光的微粒说占了上风，却不料百年后被波动说赶下宝座。虽然在十九世纪，波动同麦克斯韦的电磁理论结成极美满的策略性婚姻，以致微粒感觉它必须永远放弃重获已失的荣誉的希望，但是二十世纪开端又出现反革命的苗头
 
+不过到这时波动已阵地强固，复活的微粒并不能实现一个速战的决胜，而只做到把物理学投入内战；战事要拖四分之一世纪以上，战火蔓延得十分迅速，到 1927 年实现停战的时候，物理学已全部不可挽回地卷入战争
 
+我们已经注意了战争乌云的不祥的聚集，以及初期的小战斗和阵阵疾风，预示逼近的风暴即将来临。现在，为了在专门报告送达时更好地掌握动荡不定的战争形势，我们必须停下来视察一下这两个敌对理论的主要兵力，因为以后在一些我们不熟悉的地方要使用它们
 
+波动的武装力量是雄厚的。它满有条件保留全部电磁理论和水中的光速测量，当作第二道防线，因为仅仅它的基本兵力表面上已占压倒优势。我们现在只看其中一支
 
+反抗牛顿微粒说的最早的起义所配备的武装是这样一件事实：波能够、微粒却不能互相穿插而不受损伤，这一种现象被莫名其妙地取名叫“干涉”
 
+波的干涉被用来说明，科学家怎么能叫两道光不造成更多的亮光而造成黑暗。设想我们拿两盏灯往没有遮盖的白墙上照。墙会比较均匀地被照亮，没有什么异常情况能注意到。即使我们可以找到小得象针尖、亮得象闪电、而且发单一频率的光的一种灯，仍不会有丝毫奇怪的事或出乎意料的事可注意
 
+可是现在假若不使用两盏灯，而是让一盏灯做两样事，比如说，让它的光从一个屏的两个针孔中照过。那么墙的表面就不同了。它不再均匀地被照亮。相反，它会显得有点象一只微型斑马的背，一条条暗带布在墙面上，成明确的规则图样。这种图样叫干涉图样。光发生了干涉，造成黑暗。干涉图样是牛顿逝世后才发现的。要是知道牛顿和他的微粒当初对干涉图样能有什么解释办法，那是很有意思的。干涉图样总还得用什么简单的微粒说来解。不过，当时对于波动说，它倒是一个确凿证明
 
+设想有一个古怪而冷酷无情的百万富翁，为追寻乐趣硬要拿你当他项情绪实验中的实验材料。 他那些一脸凶相的
+保镖正严密地监视着你，准备你稍有一点抵制或反抗的表现，就向你猛扑过来，这时那位百万富翁塞进你手里一捆千元钞票，但随后才一转服就从你那颤抖的手指中间抓走；你刚一想丢失钞票认命算了，他又往你手里放，可是没等你能抓住又撤回。如果他反来复去继续他的小把戏，那么你所占有的资产  位会有很大的节律波动，如果你觉得它有点惹人烦恼， 决非抗高血压的妙药， 你或许是有道理的。现在产生一个问题，两个这样的百万富翁比一个坏吗？那不见得。 如果他们彼此步调恰恰一致，他们的确更坏，因为你的资产波动得厉害两倍。但是，假设他们步调恰恰不一致，那么，正好在一个富翁出钱的那一瞬间，另一个就把钱抓起，总的结果是你的资产会保持定稳定在平常值零，或一角，或原来的任何数目。不会有厉害的波动，你会发觉那两个富翁在场比只有一个在场轻闲得多。因为他们步调恰不一致时彼此干涉， 不产生总效应
 
+完全一样，如果两个光波总是恰恰一致达到某个地点，它们的振动彼此加强，比单独一个波造成较大的亮度。但是，如果它们总是不一致地到达，振动彼此相反，总的结果就等于零扰动，即黑暗
 
+![干涉](./imgs/gs.jpg)
 
+   这个简图说明，只有一盏灯的光透过屏上两个针孔， 如何能在墙上产生干涉图样。 因为由灯出来的波同时到达两个针孔，由屏的另一侧发出的新波彼此步调一致。墙上有的地方，这呰波总是步调一致，因此造成光亮。不过，另外一些地方和两个针孔的距离刚好使得波总是步调不一致，在这些地方，波的作用互相抵销，结果就是黑暗 
 
+这是波动说对干涉图样的正式解释。它成为在对微粒说的斗争中波动说武库里一件最有力的进攻性武器。要用微粒说去解释这种干涉效应，就得想象同一个微粒同时穿过两个针孔，这想起来确是个离奇事。所以，我们还是同意作实验的那些物理学家的意见吧：在发生干涉时，就是波的问题
+
+赫兹主要就是靠实际证明干涉现象，证实了麦克斯韦的电磁波学说是正确的。表明 x 射线是波的，也是千涉，因为 X 射线透过晶体后在照相片上产生一种特性图样，可解释为被晶体中规则排列的原子所扰动的干涉的结果。这种所谓 X 射线衍射图样，在我们的史话中还要出现
+
+早在麦克斯韦出场前很久，波动说的雷霆万钧的力量已压倒了不幸的微粒。要到一百五十年后， 微粒才充分恢复过来，重新展开搏斗。它被征服这样久之后，不能希望在自己的阵地上公开对波发动进攻。它必须依赖狡猾，而且要探寻到国土上几乎不存在波的势力的那种地区——一片荒原，无人开垦的荒原，波觉得它太险恶了，不去开发。这里是容易防御的，因为在那种地势畸岖的地带，波的重炮毫无威力，而地形对波的优雅文明的举止也不适宜。 在这些无人问津的地方， 微粒的确得到庇护， 它顽强地为自己建立了新生活，叩探不毛之地下面丰富的黄金矿脉。 起初，微粒的力量和波的力量相比正象石卵比沧海，但是它的复兴是那么生气勃勃、那么迅速，很快它的力量就象物理学七大洋中的大陆一样突露出来。为保卫它的疆域，它生产了许多新武器来抵敌波的干涉的巨大威
+力。 其中远胜过別的、最惹人注目的是光电效应。 密立根对爱H斯坦公式的精确实验证明，微粒满可以把它储备起来， 反击波的第二防线。 光电效应有个比较基本而显眼的事实，它尽可以用到前线；象干涉图样对于波一样， 这个事实对于微粒是确证，而且是鲜明得多的事实
+
+你设想自己沿着海滨靠水边排齐一长行相似的瓶子。 你吃午饭的吋候留下瓶子不管 ，回来时发觉处处有少数瓶子平躺着， 但大多数瓶子还立在午饭前它立着的地方。你会不会心里以为，有一个巨浪对你的瓶子当中少数几个小心进行了近距射击，然而同样小心避开所有别的瓶子？ 这种事只出在狄斯耐（注：美国著名动画片制片人）卡通片的领域里。 极可能是有人过去了， 忍不住心痒扔了几块石子
+
+试问，我们从光电效应发现什么呢？紫外光并不是同时从整个金属面把电子撞出来。它从这里那里撞出电子，根本没有规则性成均匀性，除非按平均来讲。难道波能够造成这种杂乱的损害吗？这里不可能产生干涉图样，因为一切按平均计算都是均匀的。 确实，只有漫无一定目标的微粒会产生这种散乱无规则的效应。确实，光必是微粒做成的。如果还有疑问，我们能够举极弱的光为证。假定光是波。那么我们可以把光的强度弄得十分弱，以致要经过譬如半小时后才有充分能量落在整个表面上，够撞出一个电子。由于光波公正无私地洒遍整个表面，不会集中在单一个电子上。 可以过多少星期还没有一点动静，后来等积累了充分能量，突然间电子会开始左右跳出，象零时（注：进攻开始时）的炮火网那样。 可是实际上并不发生这样旳事。电子维持一种零散、杂乱的轰击。而这种轰击的开始，时常在即使波全集中在单独一点上，也还来不及产生任何效应之前。按微粒说，这正是预料中的事，因为光被设想为光子的轰击。光弱时，轰击是断断续续的，与此相应，电子的反应是零散的
+
+虽然光子也许缺乏波在编制上的那种彻底性和巩固性，它在这里却有一件第一线武器， 跟波的武器不相上下。 为了讲述的完备周到，我们的话题先跳在这个量子史话前面，再插人另一个证据，证明光是由微粒构成的。 英国物理学家威尔逊经过十二年的研究，1911 年发明了云室，这是一种极有价值的装置，在云室中通过的单个电子及其他带电粒子的路径是可以看见的。1923 年，美国物理学家康普顿作了一个十分重要的实验，它只能根据这个理论来解释：光碰上电子时弹开，正象一个台球碰上另一个时弹开那样。这当然明确地不合波动说，两年后康普顿同西蒙合作， 从云室里成功地观察到这种宇宙台球游戏中个别碰撞的效应。电子径迹是可以直接观察的，光子的路径能够据相继受碰的电子对的位置很容易地推断出来。根据这种种实验，毫无疑问，个别光子是严格按照碰揸的数学定律由电子弹开的。 很难设想一种主球是波的台球戏，而且在那种清况主球也无法满足碰撞定律。因此，光
+肯定必是微粒组成的。由于对这一事实的这个明确的实验证明，康普顿在 1928 年和威尔逊合得诺贝尔奖金
+
+我们现在已经谈了两方的基本武装。在波动一方，是干涉。在微粒一方，是光电效应和光由电子弹幵的情况。在双方，各见过別的比较复杂的武器，但是为了符合我们的目的，可以主要谈这些武器，因为这些是基本的、原來的武器。 现在我们就来看战事的经过如何
+
+刚幵始时，全局似乎一团混乱，先是这一方取得优势，后来那一方政得优势。但是波动说的巨型大炮到底还是缺乏机动性， 而微粒在它选定的地盘内能发展自己的巨型炮，结果发现它同样不灵活。不久战斗沦为堑壕战，哪一方也不能攻击对方获得成功。光子不能夺取波动的土地，波动也不能蹂躏光子的领域。双方打成僵局，各自安安生生地守住自己的阵地。科学的原野分属于两个交战的阵营，前景既不是速见分晓，也不是合理的妥协
+
+科学对这样的局面并不陌生：一个学说适用于一组事实，而另一个学说能解释另一组事实。但是，在以前的事例
+中，所以出现这种局面，总有个理由好象说得通。例如，麦克斯韦方程不适用于万有引力，这并没有引起不安，因为在那个  阶段上， 谁也没料想到会发现电和引力有什么关联。但是现在物理学眼前是个全新的局面。 同一个实体——光——既是波动又是微粒。人怎么可能会想象它固有的大小和形伏呢？为造成干涉，它必须展开；但是为碰电子弹开，它必须细微地定域化。这是个基本的两难局面；波动光子会战中的僵局说明，光必定仍是个谜，叫每一个真正的物理学家心神不安。光居然是两种如此矛盾的东西，真说不过去。科学中暗藏着这样一种未澄清的二象性，侵蚀它的要害部位，这是同物理学的一切理想和传统都不合的。然而，两方各自的证据又是无可否认的；流光如水，要再过很多时候才能从这两难局面中找到出路。后来波动说发起一次出色的反击，结果有了出路， 但是目前谈这个会糟踏了全篇史话。最好是读者能通过亲身体验，领会那时期物理学家们的苦楚。他们也只可随遇而安， 带着一副愁眉苦脸四处徘徊，悲叹他们在星期一、 三、 五必须把光看成波动，在星期二、四、六看成微粒。 在星期曰， 他们千脆就祈求上天保佑 
+
+## 第五章  尼尔斯·波尔的原子
+
+ 1911 年， 正当波动微粒大会战陷入无望的僵局时， 有个年轻人尼尔斯。玻尔从本国丹麦横渡苍茫的大海， 到英国去
+继续他的学业。在剑桥呆了一年后，他接着到曼彻斯特大学，那里有个叫卢瑟福的人在当物理学教授。在科学上，玻尔当时可说是无名之辈。按专业标准讲，他的数学技巧也称不上出众。但是他禀有可贵的天赋：富于想象力，敢闯敢干，而且有一种物理学上的直觉能力，那是不大需要繁复数学的。只有对他这样的人，量子才会现出下一批珍宝。今天卓越的科学名家们崇敬这个安详谦逊的人，尊他为原子物理学研究上的精神领袖。 1922 年，即爱因斯坦之后一年，他获得诺贝尔物理学奖。 那以前两年，玻尔已担任了哥本哈拫新创设的理论物理学研究所的所长，这个研究所在他的领导的精神感召下，来发展成原子物理学研究的一个世界性中心，吸引各国杰出的科学家， 对物理学的向前发展产生极大的影响
+
+这是玻尔。可是，他原先前往去就学的那个人卢瑟福又是何许人也？
+
+早在 1895 年， 原子弹出世前不满五十年，当时卢瑟福还年轻，德国物理学家伦琴发现了 X 射线，震惊世界。他在实验通过气体放电时，注意到放电使仪器近旁的荧光物质产生辉  光， 从而多少有些偶然地发现 X 射线。1901 年创设诺贝尔奖金时，物理学奖归于伦琴。不过直到 1912 年，才证明他的 X 射线显示出波所特有的衍射图样
+
+X 射线的发现，刺激了许多方面的硏究，结果，一年后法国科学家贝克勒耳有一个更重大的偶然发现
+
+由于这种新发现的射线引起荧光，所以，那些曝光后在暗处会发光的物质似乎有可能发出这种射线。果然，贝克勒耳发现某些铀盐在曝光后真的发出这种射线。随后，凭幸运的机会，他发现这些铀盐甚至不曝光也发出这种射线。这的确令人惊讶。铀是当时已知最重的元素；他发现，它是自动发出有穿透能力的射线的，不知为什么它产生射线竟可以没有外界的帮助。贝克勒耳偶然找到了我们现在所谓的放射性，它原来是极讨厌的问题，因为不管放射性的能量多么微小，放射性总还是有能量的，而却没有看得到的供给来原。那么，这能量是怎么发生的？它从何而来？
+
+贝克勒耳的辐射对那位无双的玛丽 • 居里有一种顶不住的魅力。她当时是个年轻的无名科学家，后来却成为曾两度
+获得诺贝尔奖金的独一人：1903 年同贝克勒耳及她的丈夫皮埃尔·居里合得物理学奖，1911年独自获得化学奖。她和丈夫在巴黎做研究，1898 年宣布存在两种新元素，放射性都比铀强 。一种他们给它取名为钋，代表波兰，那是玛丽的出生国，她的火热的爱国心的对象。另一种他们取名镭。随后是四年粑两人弄得筋疲力尽的艰苦劳动的幸福日子，他们从整吨整吨铀矿砂的渣滓中，靠手工提取一星半点宝贵的镭盐
+
+镭的放射性简直不可思议。它是已知放射性最强的物质，放射性远胜过别的物质，比铀约强二百万倍。它由本身内
+部放出各种形式的能量，象一股不尽的长流：它在暗处自行发光，自身保持比周围稍热一点；后来发现，它放出前所未见的重的放射性气体；它后来成为抗癌的手段；最重要的是，后来承认它是一个放射性见证，证明物质的核心内部有一种不停的可怕的翻腾激荡。从一点点镭放出的能量在数量上是极少的，但这种具体而微的小事常常是科学中重大事件的先兆
+
+我们对放射性的内在含义的认识，主要是恩斯特 • 卢瑟福和他的合作者英国人索迪的功劳。他们在加拿大从事研究， 完成一系列高超的实验，确定了放射过程的基本事实，所以早在 1903 年，他们就提出关于原子的天然衰变和嬗变的一个学说，按基本内容讲，它到今天仍是一般公认的。卢瑟福关于原子还有其他重大无比的深奥发现，这些发现使他被确认为那个时代最大的实验物理学家。1908 年他得到诺贝尔化学奖，1921 年的化学奖授予索迪
+
+据卢瑟福和索迪的意见，放射性原子不断在爆炸，把自己裂开，并发出三种射线，用希腊文前三个字母命名，叫 α 射线、β 存射线和 γ 射线。γ 射线经证实是一种比伦琴所发现的 X 射线贯穿力大得多的 X 射线， β 射线实际是电子流。至于 α 射线，它是镭裂出的碎片，却又不是镭碎片。它虽然是镭原子爆炸结果产生的，但不是镭，而是另一种物质， 是非常轻的不活泼气体氦的原子，处于所谓电离状态，因为它带有电荷。镭原子爆炸时，不但它发出的 α 粒子和 β 粒子是不同的物质，而且剩下的碎片也如此。这碎片又是放射性的，也会发生爆炸，爆炸后的剩余物经过一长串的嬗变， 最终成为各种物质当中那个最死气沉沉的东西——铅。就这样，科学展开了一派新的前景
+
+那时，原子的结构还不大清楚。电子的发现者、1906 年获得诺贝尔奖金的汤姆孙，试提出一个说法：原子是一个带
+正电的球，电子嵌在那里面，象葡萄干嵌在果子面包里似的。由放射性物质发出的疾飞的粒子，是用来痛击原子、逼出它的奥妙的超级武器。1905 年获得诺贝尔奖金的勒纳已经指出，β 粒子很容易穿过原子，所以原子内必有广阔的空间。可是真成难题的是 α 粒子，因为它跟原子发生猛烈碰撞，这是根据汤姆孙模型怎么也说明不了的
+
+1911 年，卢瑟福已是诺贝尔奖金的荣获者，在曼彻斯特大学执教，他提出一个新的原子模型，来说明这种异常的碰撞
+现象。他指明，原子的正电荷必定集中在一个微小而重的原子核上，核直径不超过一英寸的一亿分之一。由于跟这种致密而重的核发生碰撞，α  粒子才有了那么厉害的偏转。原子中的电子，并不是象汤姆孙模型那样在原子核里面，而必是相对说來离核极遥远，绕核飞转，各电子的负电荷总和恰好跟原子核的正电荷相抵消，整个结构和一个微型太阳系维妙维肖
+
+卢瑟福可不是业余爱好者或浅薄涉猜的人。他在提出他的原子模型以前，先从数学上证明了实验证据非常确凿，他的
+结论似乎让人不能不信服。的确，他的原子模型是全部现代原子结构思想的基础。然而，卢瑟福原子解释实验结果的能力被理论上的毛病所抵消，这些毛病根深蒂固，只有下猛药治疗才有希望除根。这里谈其中两个毛病
+
+根据麦克靳韦的理论，一个卢瑟福原子灼热时会发出各种频率的光。真实的原子恰好相反，在让人能借以认识它的
+光频率方面，早已知道它是非常独特的。每一种元素选择特定的一组光频率为自己使用，当成一种商标，沒有一种元素曾假冒另一种元素的商标而获得成功。例如，拿一切元素当中最轻和最不复杂的氢来说。光谱学家凭他那一套繁复的仪式使氢灼热发光，再用疫镜來检验它的光，并没有获得一个包含虹的全色的光谱。反之，他却发现复杂的一组特定的色。由于这些色在光谱中表现为线，所以叫光谱线。光谱线可以按照线的位置以及其他特征排列成族。拿氢来说，光谱学家测置了各条线的频率，列表分族，结果得到以下一批数字：
+
+```
+2,4653910,000,000,000    2,922,560,000,000,000
+456,770,000,000,000      616,650,000,000,000
+159,870,000,000,000      233,870,000,000,000
+...................      ...................
+3,082,400,000,000,000...
+690,650,000,000,000...
+274,070,000,000,000...
+...................
+```
+
+那么，这些能测量得异常精确的数字，肯定必有深刻意义。它们是氢的商标，任何別的元素都不可以冒用。无法设想， 整个这一套复杂的独家商标系统纯属偶然，每个商标不过是偶然形成的频率聚集体。这些数字必定隐藏着氢内心深处的个人秘密。可是它们的广告词是什么呢？
+
+那是六十多年前（本书第一版1947年，巴尔末的发现市 1885 年），一个不知名的瑞士中学教师约翰·雅科布·巴耳末， 对这些频率的哑谜着上迷。在那个吋代，已知的氢原子频率不过四个，其他频率在光谱的可见区以外，位于红外区和紫外区。从这点贫乏的材料，巴耳末推断出一个不寻常的公式，虽然它极好地说明了那四个已知的频率，但总的说来未免显得太奇怪，不能很快得到人的承认；它的成功很可能纯粹是偶然的
+
+巴耳末研究的是波长。下面是他昕发现的那种定则，加以现代化，再更改成频率：
+
+取 3,287,870,000,000,000 这个神秘数字，用它构造一种不规则的往下去的梯子，各梯级的深度这样要求：把这个数字分别除以1，4，9，16，25，36，......。巴尔末公司特别引人感兴趣的地方是，以上这些数字并不是神秘数字，它们正好是自然数1，2，3，4，5，6 ......的平方。梯子见下（注：原图不是很清楚，这里我换了一张）
+
+这一切同下面列出的氢频率有什么关系呢？很简单，就是这样：头一横排种的频率是第一梯级到第二、第三、第四等等梯级的距离；第二排种的频率是第二梯级到第三、第四、第五等等梯级的距离；依次类推
+
+![氢元素频谱](./imgs/H.jpg)
+
+巴耳末只根据第二排的前四个频率就推出这个奇特的定则的基本要点，甚至进一步提出别的排也应当存在。一年年
+过去。 测量的频率越来越多，不仅测量了氢，同样也测量了其他元素。对所有这些频率，梯子原则都适用，这是瑞士科学家里兹 1908 年证明的。巴耳末根据最贫乏的数据资料，做出惊人的一绝：找到适合一切元素的光谱的秘诀，而他做这件事远远走在吋代前面，所以他生前没有真正得到承认
+
+巴耳末的想法严密符合事实，而且高度简洁精炼，再加上自然数有规则的出现，这就使人无法再怀疑，它表示大自然的隐秘构迨的一个极重要的细况。它揭明了宇宙的一根名副其实的脊柱。卢瑟福的原子定要说会发出一切可能频率的光，相形之下，就只是个变形虫罢了
+
+这是卢瑟福的原子的第一个缺点。第二个缺点解释起来不这么费时间。那就是：据麦克斯韦的理论，卢瑟福原子是
+个讲不通的结构。照牛顿力学的方式绕太阳转的行星，和符合电动力学定律围着原子核飞的电子，有一个根本区别。 行星沿椭圆轨道绕太阳转时平平静静。可是，电子绕原子核转就会发生非常激烈的作用。电子不但会以各种频率的光波放出自己的能量，而且在放出能量时，会迅速地沿螺旋线一直缩进核里去。假使原子真的是卢瑟福模型那种式样的东西，它怎么有可能存在一段吋间呢？
+
+正当卢瑟福的原子为生存而跟这种灾变性的反对理由苦斗时，年轻的玻尔在 1913 年出场提了一些建议，那些建议可  说是大无畏的。他讲，他以前不是遇见过这第二个反对理由吗？这不就是紫外灾变之类的东西旧调重弹吗？假如这样，这不是表明注射一针量子剂对这个生病的理论有帮助吗？这样做本身不是又说明卢瑟福模型的比较薄弱的实验证据，必然压倒麦克斯韦的电磁学说丰富的、但已经严重动摇的证据吗？固然，卢瑟福自己的证据直接依据麦克斯韦的数学方法，可是只有蹩脚的科学研究者才非要充分理解自己的直觉不可。于是玻尔没有让这种小节弄得气馁；这的确是有见识，因为有一些最现代的原子物理理论，由于缺乏更好的根据仍需要依赖麦克斯韦，这真是对那些理论的辉煌胜利的嘲笑
+
+要说玻尔建立他的原子的量子论有彻底剽窃的罪过，那是言之太过了。可是，他由那位大名鼎鼎的英国人、天生外交
+家、《爱奥兰茜》中的大法宫受惠极多而不表谢意，这一点倒确实不会有正当疑问
+
+这段事吉尔伯特叙述得历历如画。仙女爱奥兰茜为拯救大法官免于犯想不到的重婚罪，使那出歌剧的倩节免于严重
+崩溃，对他泄露了真情，说她就是他丢失已久的妻子，因而违反了一项缄口的神圣誓约，应处死刑。正当其余的仙女们在一旁悲伤观望，仙女王把心一横，宣布对她们大家所爱的爱奧兰茜的可怕的判决
+
+且住！这是什么？骚动！还有，阻断！王国内身着貂皮的贵族们，仿佛受到他们绝对无力控制的一种不能违抗的共  同目的所驱使，正从四面八方涌进来。那么有力地粑他们带到这里来的，会是什么呢？谁也说不好！这就是歌剧的那种显著特色，不解明的神秘事当中的一个。从他们的行动看来，似乎他们看见了台下前方那位真正的普洛斯佩罗惹起他们注目，那普洛斯佩罗穿着不合适的礼服，他的指挥棒象魔术那样灵验地凭空召来音乐。 确实他们的目光只落在他身上。 不论是什么缘故，贵族们的到来太及时了，因为这使仙女们有了勇气，去试最后一个渺茫的机会，搭救她们心爱的爱奧兰茜
+
+> 仙女蕾拉：且住！如果爱奥兰茜必须死， 我们大家也必须死；因为媿犯了罪， 我们也一样犯了罪！
+>
+> 仙女王： 什么！
+>
+> 仙女赛莉雅： 我们全是仙女公爵夫人、侯爵夫人、伯爵夫人、子爵天人， 男爵夫人。
+>
+> 孟塔拉拉特勛爵： 这是我们的过错。 她们不由自主。
+>
+> 女王： 看来她们由了自主， 而且还是尽意由了自主！ [ 稍停。] 你们都招来死罪；可是我不能把一帮人统统杀光！ 然而[ 展开一个卷轴]法律分明——仙女嫁凡人者死！
+>
+> 大法官： 请允许我这个老衡平法起草人进一言。法学家思想的机敏足可应急。 事清其实十分筒单——只插入一个字就会解决。现规定，仙女不嫁凡人者死，您瞧，这立刻摆脱了您的困难！
+>
+> 女王： 算人喜欢你的幽默。 好了!    
+
+这位大法官如此。尼尔斯 • 玻尔也如此。玻尔面临同样严重的局势，也只插入一个字
+
+他不提出麦克斯韦式的定律：
+
+> 绕一个原子核旋转的各个电子会辐射其能量并沿螺旋线缩进原子核
+
+他大胆地提出：
+绕一个原子核旋转约各个电子不会辐射其能量并沿螺旋线缩进原子核
+
+他既然采取了这一重大步骤，拿麦克斯韦学说为卢瑟福原子的不通做替罪羊， 从而拯救了卢瑟福的原子， 他现在便可以随意规定任何新法则，而不感觉受平常细节的束缚了。道路既已这样扫清， 他又把麦克斯韦定律改换成特意抅造的两条定则，以便消除卢瑟福原子的另一个重大缺点——以便给它加上一根脊柱
+
+绕太阳转动的行星可以沿任意大小的圆运动。圆越小，行星的速度越大。 要使一个行星以太阳为中心沿任何特定的
+圆运动，只需要按对于那样大小的圆应有的速度，把行星适当发动起来；其他一切，大自然自有安排。 按照牛顿力学的引力理论， 所有这样的圆都有可能做行星轨道。玻尔效法卢瑟福，接受这个总的讲法。但是他作了一些重要修正， 大大限制了绕原子核转动的电子的自由：只容许电子有某些特定的轨道，其余的轨道宣布不准入内。电子不能够再随意想到哪里就漫游到哪里；它不象公共汽车，更象有轨电车，必须固守着玻尔铺设的轨道，虽然它确是比旧式有轨电车的自由稍稍多一点，这我们不久就要讲到
+
+玻尔应用了前一年牛津大学的尼科耳孙实际上已经发现的一个公式，以数学上的精密性来铺设他的轨道
+
+回顾一下，可以看出玻尔的这个新槪念是普朗克的基本思想的一个多么直接的扩展。普朗克的重大发现等于一条定
+则，把他讲的上下跳动的粒子的振动限制在某些容许的振幅范围内， 其他一切振幅都是禁止的。 玻尔不过是把禁戒运动的概念应用到不作单纯上下振动而作圆周运动的粒子上。实际上，两者非常类似，后来当尼科尔孙—玻尔定则扩展到更复杂的运动时，发现选择容许轨道的定则和支配跳动粒子旳定则能用同一个公式表示。这个公式使用一个相当漂亮的数学符号，它颇为坚实，如果展出它，不会造成什么损伤： 
+$$
+\oint {p d q}={n h}
+$$
 
 
 
